fixed problem with lacking scrollbar on user homepage. Fixes #271

--- a/Notewise/root/style.css
+++ b/Notewise/root/style.css
@@ -1,8 +1,9 @@
-body, html {
-	width: 100%; height: 100%;
-	top: 0; left: 0;
-	padding: 0; margin: 0;
-        overflow: hidden;
+body.kernelview {
+    width: 100%; height: 100%;
+    top: 0; left: 0;
+    padding: 0; margin: 0;
+    overflow: hidden;
+    background: url('/images/background-gradient.png');
 }
 
 .vkernel {
@@ -1005,11 +1006,7 @@ div.auto_complete ul strong.highlight {
 * {
     -moz-box-sizing: border-box;
 }
-body {
-    padding: 0px;
-    margin: 0px;
-    background: url('/images/background-gradient.png');
-}
+
 td{
     position: relative;
 }
@@ -1318,4 +1315,19 @@ table.sidebar {
 
 #saving_indicator {
     font-weight: bold;
+}
+
+.resultsbar {
+    background: url('/images/sidebar-mid-mid.png');
+    height: 23px;
+    text-align: right;
+    border-top: 1px solid #999;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+body.search {
+	padding-right: 20px; 
+	padding-left: 20px; 
+        overflow: auto;
 }
